fix footer spacing

--- a/css/styles.css
+++ b/css/styles.css
@@ -383,7 +383,6 @@ transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 .footer-container {
     display: flex;
     align-items: baseline;
-    justify-content: space-between;
 }
 
 .footer-left-box {
@@ -415,6 +414,9 @@ transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
     background-color: #31d0aa;
 }
 
+.footer-right-box {
+    margin-left: 80px;
+}
 .footer-form {
     display: flex;
     gap: 24px;
